# maple

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  VALIDATOR_BUGS_NOTES.md  pyproject.toml  release-please-config.json  requirements.txt  setup.sh
.github/workflows/: pr-title-lint.yml  release-please.yml  test.yml
data/: model_context.csv  parameter_definitions.csv  simbio_parameters.csv
docs/: automated_workflow.md  calibration_target_design.md  calibration_workflow.md  example_parameter_input.csv  example_quick_estimate_input.csv  example_test_statistic_input.csv  qsp_review_plan.md  quick_example.md
examples/: calibration_target_example.csv  generated_joint_calibration.jl  input_format.csv  psc_activation_rate_PDAC_deriv001.yaml  psc_death_activated_PDAC_deriv002.yaml  psc_proliferation_PDAC_deriv001.yaml  psc_recruitment_const_PDAC_deriv001.yaml  psc_recruitment_encounter_PDAC_deriv001.yaml  staged_extraction.py
prompts/: constraint_validation_prompt.md  json_validation.md  metadata_checklist.md  metadata_conversion_template.md  parameter_checklist.md  qsp_parameter_extraction_prompt.md  qsp_parameter_extraction_prompt_v2.md  qsp_parameter_extraction_prompt_v3.md  quick_parameter_estimation_prompt.md  schema_conversion.md  suggest_test_statistics_prompt.md  test_statistic_prompt.md  test_statistic_prompt_v2.md  validation_fix_prompt.md
prompts/base/: metadata_conversion_template.md  parameter_checklist.md  parameter_definition_prompt.md  prior_metadata_prompt.md  qsp_parameter_extraction_prompt.md
prompts/shared/: source_and_validation_rubrics.md
scripts/: batch_creator.py  batch_monitor.py  batch_workflow_commands.sh  calibrate_isolated_target.py  calibrate_joint_targets.py  create_batch.py  create_checklist_batch.py  create_checklist_from_json_batch.py  create_constraint_validation_batch.py  create_json_validation_batch.py  create_parameter_batch.py  create_parameter_definition_batch.py  create_pooling_metadata_batch.py  create_quick_estimate_batch.py  create_schema_conversion_batch.py  create_test_statistic_batch.py  export_model_definitions.py  extract_prompt.py  generate_prompts.py  inspect_jsonl.py  parameter_utils.py  prompt_assembly.py  run_extraction_workflow.py  run_schema_conversion.py  run_validation_fix.py  unpack_results.py  unpack_single_json.py  upload_batch.py  upload_immediate.py  validate_calibration_target.py  validate_simplified_target.py  validate_submodel_target.py
scripts/debug/: README.md  extract_prompt.py  pretty_print_csv.py
scripts/lib/: batch_creator.py  fulltext_fetcher.py  hash_utils.py  header_utils.py  model_definition_exporter.py  parameter_utils.py  prompt_assembly.py  schema_version_detector.py  validation_fix_batch_creator.py  validation_runner.py  workflow_orchestrator.py
scripts/matlab/: compute_test_statistic_from_yaml.m  export_model_definitions.m  generate_calibration_target_from_yaml.m  simple_test_harness.m
scripts/prepare/: create_checklist_batch.py  create_checklist_from_json_batch.py  create_json_validation_batch.py  create_parameter_batch.py  create_parameter_definition_batch.py  create_pooling_metadata_batch.py  create_quick_estimate_batch.py  create_schema_conversion_batch.py  create_test_statistic_batch.py  enrich_parameter_csv.py
scripts/process/: convert_legacy_to_v2.py  unpack_results.py  unpack_single_json.py
scripts/run/: batch_monitor.py  upload_batch.py
scripts/validate/: MANUAL_REVIEW_CHECKLIST.md  README.md  check_denovo_consistency.py  check_doi_validity.py  check_duplicate_primary_sources.py  check_schema_compliance.py  check_snippet_sources.py  check_snippet_sources_manual.py  check_snippet_sources_manual_verify.py  check_source_references.py  check_text_snippets.py  check_value_consistency.py  compare_to_legacy.py  run_all_validations.py  run_test_statistic_validations.py  tag_validation_results.py  test_code_execution.py  test_python_code_execution.py  test_r_code_execution.py  test_r_code_reproducibility.py  validation_utils.py
src/maple/: __init__.py  mcp_server.py
src/maple/cli/: enrich.py  export_model.py  extract.py  interactive.py  review.py  validate.py
src/maple/core/: config.py  exceptions.py  header_utils.py  immediate_processor.py  model_definition_exporter.py  model_query_service.py  model_structure.py  model_structure_exporter.py  parameter_utils.py  prompt_builder.py  prompts.py  pydantic_models.py  (+5 more)
src/qsp_llm_workflows/: __init__.py
templates/: parameter_definition_template.yaml  parameter_metadata_template.yaml  parameter_metadata_template_v2.yaml  parameter_metadata_template_v3.yaml  prior_metadata_template.yaml  quick_estimate_template.yaml  test_statistic_template.yaml  test_statistic_template_v2.yaml
templates/configs/: header_fields.yaml  prompt_assembly.yaml
templates/examples/: k_ECM_fib_sec_example.yaml  test_statistic_derived_example.yaml  test_statistic_example.yaml
tests/: __init__.py  test_cli_entry_points.py  test_immediate_api_simple.py  test_installation.py  test_model_exporter.py  test_package_resources.py  test_pydantic_schemas.py
tests/integration/: __init__.py  conftest.py  test_batch_workflow.py  test_immediate_workflow.py  test_submodel_inference_pipeline.py  test_validation_context.py
tests/unit/: test_bootstrap_capture.py  test_cross_scenario_loader.py  test_test_stats_loader.py
workflow_jobs/: calibration_target_requests.jsonl  calibration_target_requests.preview.txt  immediate_calibration_target_20251230_140105_results.jsonl  immediate_calibration_target_20251230_140151_results.jsonl  immediate_calibration_target_20251230_143916_results.jsonl  immediate_calibration_target_20251230_170526_results.jsonl  immediate_calibration_target_20251230_183206_results.jsonl  immediate_calibration_target_20251230_232856_results.jsonl  immediate_calibration_target_20251230_233659_results.jsonl  immediate_validation_fix_parameter_20251124_134905_results.jsonl  validation_fix_parameter_20251124_134228_requests.jsonl  validation_fix_parameter_20251124_134228_requests.preview.txt
(+193 files in other folders)
