[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qsp-llm-workflows"
version = "0.1.0"
description = "LLM workflow automation tools for extracting QSP metadata from scientific literature"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Joel Eliason", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
# Main workflow commands
qsp-extract = "qsp_llm_workflows.cli.extract:main"
qsp-validate = "qsp_llm_workflows.cli.validate:main"
qsp-fix = "qsp_llm_workflows.cli.fix:main"

# Individual tools
qsp-enrich-csv = "qsp_llm_workflows.cli.enrich:main"
qsp-export-model = "qsp_llm_workflows.cli.export_model:main"
qsp-batch-monitor = "qsp_llm_workflows.cli.monitor:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["qsp_llm_workflows*"]

[tool.setuptools.package-data]
"qsp_llm_workflows" = [
    "templates/**/*",
    "prompts/**/*",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]
