[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maple"
version = "0.1.0"
description = "Extract calibration targets from scientific literature for QSP model calibration with structured YAML schemas, Pydantic validation, and Julia/Turing.jl code generation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Joel Eliason", email = "jeliaso2@jh.edu"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "openai>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pydantic-ai>=0.0.14",  # For structured outputs with discriminated unions
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pint>=0.25",  # For unit-aware calculations
    "ruamel.yaml>=0.18",  # Better YAML formatting with block scalars
    "scipy>=1.11.0",  # For ODE integration in SubmodelTarget validation
    "fastmcp>=2.0.0",  # MCP server for extraction guidance
    "pypdf>=4.0.0",  # PDF text extraction for snippet validation
    "numpy>=1.24.0",  # Bootstrap sampling and distribution fitting
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black==24.10.0",
    "ruff>=0.1.0",
    "freezegun>=1.2.0",
]
inference = [
    "numpyro>=0.15",
    "jax>=0.4",
    "jaxlib>=0.4",
]

[project.urls]
Homepage = "https://github.com/popellab/maple"
Repository = "https://github.com/popellab/maple"
"Bug Tracker" = "https://github.com/popellab/maple/issues"

[project.scripts]
qsp-extract = "maple.cli.extract:main"
qsp-export-model = "maple.cli.export_model:main"
maple-mcp = "maple.mcp_server:main"
maple-yaml-to-prior = "maple.core.calibration.yaml_to_prior:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["maple*"]

[tool.setuptools.package-data]
"maple" = [
    "prompts/**/*",
    "matlab/**/*",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]
markers = [
    "integration: marks tests that hit external APIs (deselect with '-m \"not integration\"')",
]
# Ignore Pydantic models that start with "Test" (not test classes)
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]
